Maven Central preparations - Javadoc+reformatting, translations cleanup